--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
     <script defer src="js/main.js"></script>
 </head>
 <body>
+  <div id="app">
+    <h1>{{ name }} </h1>
+      <cols></cols>
+  </div>
 </body>
 </html>
