--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>NOTES</title>
-    <link rel="stylesheet" href="css/main.css">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script defer src="js/vue.js"></script>
     <script defer src="js/main.js"></script>
+    <link rel="stylesheet" href="css/main.css">
+    <title>App</title>
 </head>
 <body>
-  <div id="app">
-    <h1>{{ name }} </h1>
-      <cols></cols>
-  </div>
+<div id="app">
+    <column></column>
+</div>
 </body>
 </html>
